Fix multiple scrollbars on longer country options

--- a/src/components/CountrySelector/style.scss
+++ b/src/components/CountrySelector/style.scss
@@ -1,5 +1,9 @@
 @import '../Theme/constants';
 
+.container {
+  flex: 1 1 auto;
+}
+
 .text {
   font-size: $font-size-small;
 }
